fix: index section class

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="secao">
 
             </section>
-            <section clas="secao">
+            <section class="secao">
 
             </section>
             <section class="secao">
