fix: chat-btn image classes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         
         <button class="circle chat-btn">
-            <img class="img chat-btn-img" alt="Imagem do Chat">
+            <img class="img" alt="Imagem do Chat">
         </button>
 
     </div>
