update: index.html comments

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
     
+    <!-- Container Principal -->
 
     <div class="container">
+
+        <!-- Barra de Navegação -->
+
         <nav>
             <!-- Logo à esquerda -->
             <div class="logo left">
@@ -22,12 +26,21 @@
                 <li><a href="#">Sobre nós</a></li>
             </ul>
         </nav>
+
+         <!-- Conteudo Principal -->
         <main>
+
+             <!-- Seção 01 -->
+
             <section class="secao">
+
+                <!-- Conteiner de Alinhamento Central -->
                 <div class="align-center">
+                    <!-- Titulo -->
                     <h1>
                         Explore o melhor dos vinhos onde cada garrafa conta uma história
                     </h1>
+                    <!-- Container de Pesquisa -->
                     <div class="search-container">
                         <div class="search">
                             <input type="text">
@@ -36,20 +49,28 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Seção 02 -->
             <section class="secao">
 
             </section>
+            <!-- Seção 03-->
             <section class="secao">
 
             </section>
+            <!-- Seção 04 -->
             <section class="secao">
 
             </section>
         </main>
+
+        <!-- Footer -->
+
         <footer class="footer">
 
         </footer>
 
+        <!-- Botão do Chat -->
         
         <button class="circle chat-btn">
             <img class="img" alt="Imagem do Chat">
