update: seção comentários

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             </section>
             <!-- Seção 04 -->
             <section class="secao">
+
+                <div class="container-titulo">
+                    <h2>
+                        Opiniões de Clientes
+                    </h2>
+                </div>
+
                 <div class="container-comentarios">
 
                     <div class="seta-esquerda">
