add: Imagem vinho

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
                         <img src="" alt="Seta para direita" class="img">
                     </div>
                 </div>
+                
+                <img src="" alt="Garrafa de Vinho">
+
             </section>
         </main>
 
