--- a/index.html
+++ b/index.html
@@ -56,12 +56,68 @@
             </section>
             <!-- Seção 03-->
             <section class="secao">
-
+                <div class="container-melhores-avaliados">
+                    <!-- Titulo -->
+                    <h2>
+                        Melhores avaliados
+                    </h2>            
+                    <!-- primeira sugestão -->
+                    <div class="box-imagem1">
+                        <img src="" alt="Vinho imagem" class="img">
+                            <div class="info-vinho">
+                                nome do vinho
+                                <img src="" alt="bandeira-origem" class="img">
+                            </div>
+                    </div>
+                    <br>
+                    <!-- seta para esquerda -->
+                    <div class="seta-esquerda">
+                        <img src="" alt="Seta para esquerda" class="img">
+                    </div>
+                    <br>
+                    <!-- segunda sugestão (PRINCIPAL) -->
+                    <div class="box-imagem1">
+                        <img src="" alt="Vinho imagem" class="img">
+                            <ul class="info-vinho-direita">
+                                <li>nome do vinho</li>
+                                <li><img src="" alt="imagem-uva" class="img">
+                                tipo do vinho</li>
+                                <li><img src="" alt="bandeira-origem" class="img">
+                                nome do país de origem</li>
+                                <li><a href="#">ver mais</a></li>
+                                </ul>
+                            <div class="adicionar-carrinho">
+                                <img src="" alt="imagem-carrrinho" class="img">
+                                <img src="" alt="imagem-retirar" class="img">
+                                <img src="" alt="imagem-quantidade" class="img">
+                                <img src="" alt="imagem-adicionar" class="img">
+                            </div>
+                    
+                    </div>
+                    <br>
+                    <!-- seta para direita -->
+                    <div class="seta-direita">
+                        <img src="" alt="Seta para direita" class="img">
+                    </div>
+                    <br>
+                    <!-- terceira sugestão -->
+                    <div class="box-imagem3">
+                        <img src="" alt="Vinho imagem" class="img">
+                            <div class="info-vinho">
+                                nome do vinho
+                                <img src="" alt="bandeira-origem" class="img">
+                            </div>
+                    </div>
+                    <br>
+                </div>
             </section>
             <!-- Seção 04 -->
             <section class="secao">
                 <div class="container-comentarios">
-
+                    <!-- Titulo -->
+                    <h2>
+                        Opiniões dos clientes
+                    </h2>       
                     <div class="seta-esquerda">
                         <img src="" alt="Seta para esquerda" class="img">
                     </div>
@@ -158,7 +214,45 @@
         <!-- Footer -->
 
         <footer class="footer">
-
+            <div class="primeira-coluna">
+                <h4>
+                    Vinheria agnello
+                </h4>
+                <ul>
+                    <li><a href="#">lorem ipsum</a></li>
+                    <li><a href="#">lorem ipsum</a></li>
+                    <li><a href="#">lorem ipsum</a></li>
+                    <li><a href="#">lorem ipsum</a></li>
+                </ul>
+            </div>
+            <div class="redes-sociais">
+                <h4>
+                    Redes sociais
+                </h4>
+                <ul>
+                    <li><img src="" alt="facebook" class="img"></li>
+                    <li><img src="" alt="instagram" class="img"></li>
+                    <li><img src="" alt="Twitter" class="img"></li>
+                </ul>
+            </div>
+            <div class="fale-conosco">
+                <h4>
+                    Fale conosco
+                </h4>
+                <ul>
+                    <li>telefone</li>
+                    <li>celular</li>
+                    <li>email</li>
+                </ul>
+            </div>
+            <div class="endereço">
+                <h4>
+                    Venha nos conhecer
+                </h4>
+                <p>
+                    Rua Agnello, 313
+                </p>
+            </div>
         </footer>
 
         <!-- Botão do Chat -->
